--- a/composer.json
+++ b/composer.json
@@ -62,27 +62,27 @@
     "scripts": {
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta",
             "php artisan clear-compiled",
             "php artisan optimize",
-            "composer dump-autoload"
+            "composer dump-autoload",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta",
             "php artisan clear-compiled",
             "php artisan optimize",
-            "composer dump-autoload"
+            "composer dump-autoload",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta"
         ],
         "post-create-project-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta",
             "php artisan clear-compiled",
             "php artisan optimize",
-            "composer dump-autoload"
+            "composer dump-autoload",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta"
         ],
         "test": [
             "composer install --no-scripts",
