--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "nesbot/carbon": "1.22.*",
         "tucker-eric/eloquentfilter": "1.1.*",
         "daltcore/lara-pdf-merger": "^2.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "ilhanet/erpnet-permissions": "1.0.1"
     },
     "require-dev": {
         "fzaninotto/faker": "1.8.*",
