--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
 	"repositories" : [{
 			"type" : "vcs",
 			"url" : "https://github.com/lucianobapo/erpnet-profiting-calendar"
+		}, {
+			"type" : "vcs",
+			"url" : "https://github.com/lucianobapo/erpnet-profiting-milk.git"
 		}
 	],
 	"type" : "project",
@@ -50,6 +53,7 @@
 		"daltcore/lara-pdf-merger" : "^2.0",
 		"predis/predis" : "^1.1",
 		"ilhanet/erpnet-profiting-calendar" : "0.0.1",
+		"ilhanet/erpnet-profiting-milk" : "0.0.1",
 		"ilhanet/erpnet-permissions" : "1.0.1"
 	},
 	"require-dev" : {
@@ -65,7 +69,10 @@
 		"psr-4" : {
 			"App\\" : "app/",
 			"Modules\\" : "modules/"
-		}
+		},
+		"files" : [
+			"app/helpers.php"
+		]
 	},
 	"autoload-dev" : {
 		"psr-4" : {
