--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
 		"predis/predis" : "^1.1",
 		"ilhanet/erpnet-profiting-calendar" : "0.0.1",
 		
-		"ilhanet/erpnet-profiting-milk" : "0.0.1",
+		"ilhanet/erpnet-profiting-milk" : "dev-master",
 		"ilhanet/erpnet-permissions" : "1.0.1"
 	},
 	"require-dev" : {
